2009-05-15  Craig Howland <howland@LGSInnovations.com>

	* configure.in:  Add configuration test for long double type existing
	and set flag _HAVE_LONG_DOUBLE if true.  Fix INIT_ARRAY (.init_array)
	and _LDBL_EQ_DBL tests to not link so that will work with
	cross-compilers.
	* configure: Regenerated.
	* Makefile.in: Ditto.
	* newlib.hin: Add _HAVE_LONG_DOUBLE flag.
	* libc/include/math.h:  Change non-builtin defines for HUGE_VAL,
	HUGE_VALF, and HUGE_VALL to be constant expressions.  Add definitions
	for the non-builtin case for INFINITY and NAN.  Gate HUGE_VALL and 
	union __ldmath definitions with (new) _HAVE_LONG_DOUBLE.
	*libm/common/s_infconst.c:  Change definitions to use values from
	float.h instead of non-so-portable integer forms.  Mark as being
	deprecated (because now removed from math.h, are not used anywhere
	in Newlib, itself).

2009-05-15  Corinna Vinschen  <corinna@vinschen.de>

	* libc/string/local.h: New file.
	* libc/string/wcswidth.c (wcswidth):  Convert japanese wide
	characters to Unicode here.  Handle surrogate pairs for UTF-16
	systems.  Call __wcwidth rather than wcwidth.
	* libc/string/wcwidth.c: New implementation using Markus Kuhn's
	wcwidth implementation for Unicode.
	(bisearch): New static function.
	(__wcwidth): New function.  Take wint_t rather than wchar_t as
	parameter to allow full Unicode handling on UTF-16 systems.
	Move old wcwidth implementation here for non-multibyte aware
	systems.
	(wcwidth): Convert japanese wide characters to Unicode here.
	Call __wcwidth rather than using iswprint/iswcntrl.

2009-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/ctype/local.h (JP_JIS, JP_SJIS, JP_EUCJP): Move definition
	to jp2uc.c.
	(__jp2uc): Remove declaration.
	(_jp2uc): Declare.
	* libc/ctype/jp2uc.c (JP_JIS, JP_SJIS, JP_EUCJP): Define.
	(__jp2uc): Remove Cygwin special case.
	(_jp2uc): New function.  On Cygwin, just return c.
	* libc/ctype/iswalpha.c (iswalpha): Just call _jp2uc.
	* libc/ctype/iswblank.c (iswblank): Ditto.